force-app/main/default/objects/Referral_Status_Changed__e/Referral_Status_Changed__e.object-meta.xml
<CustomObject>
    <description>Platform event published after an Employee Referral status changes.</description>
    <label>Referral Status Changed</label>
    <pluralLabel>Referral Status Changed Events</pluralLabel>
</CustomObject>