force-app/main/default/objects/Referral_Status_Changed__e/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <description>User Id that changed the referral status.</description>
    <label>Changed By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>