force-app/main/default/objects/Referral_Status_Changed__e/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <description>New referral status.</description>
    <label>New Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>