force-app/main/default/objects/Referral_Status_Changed__e/fields/OldStatus__c.field-meta.xml
<CustomField>
    <fullName>OldStatus__c</fullName>
    <description>Previous referral status.</description>
    <label>Old Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>