force-app/main/default/objects/Referral_Status_Changed__e/fields/ReferralId__c.field-meta.xml
<CustomField>
    <fullName>ReferralId__c</fullName>
    <description>Employee Referral record Id.</description>
    <label>Referral Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>